--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -28,12 +28,13 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-2 col-md-3 col-6">
-          <a href="./" class="brand-wrap"><img class="logo" src="{% static './images/logo.png' %}" /></a> <!-- brand-wrap.// -->
+          <a href="{% url 'home' %}" class="brand-wrap"><img class="logo" src="{% static './images/logo.png' %}" /></a> <!-- brand-wrap.// -->
         </div>
         <div class="col-lg col-sm col-md col-6 flex-grow-0">
           <div class="category-wrap dropdown d-inline-block float-right">
             <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bars"></i> All category</button>
             <div class="dropdown-menu">
+              <a class="dropdown-item" href="{% url 'store' %}">All Products</a>
               {% for category in links %}
                 <a class="dropdown-item" href="{{ category.get_url }}">{{ category.category_name }}</a>
               {% endfor %}
