--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -24,27 +24,12 @@
               <div class="filter-content collapse show" id="collapse_1" style="">
                 <div class="card-body">
                   <ul class="list-menu">
-                    <li>
-                      <a href="#">People</a>
-                    </li>
-                    <li>
-                      <a href="#">Watches</a>
-                    </li>
-                    <li>
-                      <a href="#">Cinema</a>
-                    </li>
-                    <li>
-                      <a href="#">Clothes</a>
-                    </li>
-                    <li>
-                      <a href="#">Home items</a>
-                    </li>
-                    <li>
-                      <a href="#">Animals</a>
-                    </li>
-                    <li>
-                      <a href="#">People</a>
-                    </li>
+                    <a href="{% url 'store' %}">All Products</a>
+                    {% for category in links %}
+                      <li>
+                        <a href="{{ category.get_url }}">{{ category.category_name }}</a>
+                      </li>
+                    {% endfor %}
                   </ul>
                 </div> <!-- card-body.// -->
               </div>
@@ -142,7 +127,7 @@
                   </div> <!-- img-wrap.// -->
                   <figcaption class="info-wrap">
                     <div class="fix-height">
-                      <a href="./product-detail.html" class="title">{{ product.name }}</a>
+                      <a href="{{ product.get_url }}" class="title">{{ product.name }}</a>
                       <div class="price-wrap mt-2">
                         <span class="price">${{ product.price }}</span>
                       </div> <!-- price-wrap.// -->
